--- a/index.html
+++ b/index.html
@@ -6,24 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Melon Pan</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="css/estilo.css">
-    
     <link rel="icon" type="image/x-icon" href="./img/icono.png">
 </head>
 
 <body>
     <div class="fondo"></div>
     <div class="grid">
-        <header id="top">
+        <header>
+            <div>
             <a href="index.html">
                 <img src="./img/logo.png" alt="logo" class="logo">
             </a>
+            <!-- 
             <form class="busqueda" action="" method="post">
                 <p>
                     <label for="nombre"></label>
                     <input type="text" name="busqueda" id="busqueda" required="obligatorio" placeholder="Buscar">
                 </p>
             </form>
+            -->
+        </div>
             <nav class="menu">
                 <ul>
                     <li>
@@ -120,29 +125,28 @@
         </main>
 
         <footer>
-            <img src="./img/imagenejemplo.png" width="150" alt="">
-            <h5>Todos los derechos reservados</h5>
-            <a href="#top">
-                <h5>Ir al comienzo</h>
-            </a>
+            <img class="logoFooter" src="../img/logo.png" alt="logo">
             <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident unde dolores velit adipisci
-                reprehenderit ipsa eaque voluptatem cumque tenetur veritatis aut ea, molestias libero quisquam
-                saepe
-                officia praesentium at nulla!
+                Copyright Melon Pan | 2022. Todos los derechos reservados.
+                Defensa de las y los consumidores.
             </p>
-            <p> <strong>Redes</strong> </p>
-            <a href="">
-                <img src="./img/imagenejemplo.png" width="50" height="50" alt="Instagram">
-            </a>
-            <a href="">
-                <img src="./img/imagenejemplo.png" width="50" height="50" alt="Twitter">
-            </a>
-            <a href="">
-                <img src="./img/imagenejemplo.png" width="50" height="50" alt="Facebook">
-            </a>
+            <div class="redes">
+                <h5>Seguinos en nuestras redes!</h5>
+                <a class="nostyle" href="https://www.instagram.com">
+                    <img class="redesImagenes" src="../img/insta.png" alt="Instagram">
+                </a>
+                <a class="nostyle" href="https://twitter.com/home">
+                    <img class="redesImagenes" src="../img/twitter.png" alt="Twitter">
+                </a>
+            </div>
         </footer>
     </div>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+            integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js"
+            integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
