Se agrego un CSS de versión antigua

--- a/paginas/figuras.html
+++ b/paginas/figuras.html
@@ -199,15 +199,15 @@
             Copyright Melon Pan | 2022. Todos los derechos reservados.
             Defensa de las y los consumidores.
         </p>
-        <div>
-        <h5>Seguinos en nuestras redes!</h5>
-        <a href="">
-            <img class="redesImagenes" src="../img/insta.png" alt="Instagram">
-        </a>
-        <a href="">
-            <img class="redesImagenes" src="../img/twitter.png" alt="Twitter">
-        </a>
-    </div>
+        <div class="redes">
+            <h5>Seguinos en nuestras redes!</h5>
+            <a class="nostyle" href="https://www.instagram.com">
+                <img class="redesImagenes" src="../img/insta.png" alt="Instagram">
+            </a>
+            <a class="nostyle" href="https://twitter.com/home">
+                <img class="redesImagenes" src="../img/twitter.png" alt="Twitter">
+            </a>
+        </div>
     </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
