--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="css/estilo.css">
+    <meta name="keywords" content="Manga, Figuras, Indumentaria, Anime, Tienda">
+    <meta name="description" content="Tienda online con tematica de anime/manga">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="./img/icono.png">
 </head>
 
@@ -20,14 +23,6 @@
             <a href="index.html">
                 <img src="./img/logo.png" alt="logo" class="logo">
             </a>
-            <!-- 
-            <form class="busqueda" action="" method="post">
-                <p>
-                    <label for="nombre"></label>
-                    <input type="text" name="busqueda" id="busqueda" required="obligatorio" placeholder="Buscar">
-                </p>
-            </form>
-            -->
         </div>
             <nav class="menu">
                 <ul>
@@ -52,8 +47,8 @@
                 </ul>
             </nav>
         </header>
-        <main>
-            <div class="portada">
+        <main >
+              <div class="portada">
                 <img src="./img/portada1.png" alt="portada" class="portadaImg">
             </div>
             <section>
@@ -101,8 +96,7 @@
                             </div>
                         </div>
                         <div class="novedades__contenedor">
-                            <h3>Madoka Magica 
-                                Homura's Revenge 2</h3>
+                            <h3>Madoka Magica 2</h3>
                             <div class="novedades__imagen">
                                 <img src="./img/madokahomura2.png" alt="Madoka magicahomura's revenge tomo 2">
                             </div>
