--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -9,29 +9,36 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilo.css">
+    <meta name="keywords" content="Manga, Figuras, Indumentaria, Anime, Tienda">
+    <meta name="description" content="Tienda online con tematica de anime/manga">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="../img/icono.png">
 </head>
 
 <body>
     <div class="fondo"></div>
     <header>
-        <a href="../index.html">
-            <img src="../img/logo.png" alt="logo" class="logo">
-        </a>
-        <!-- 
-            <form class="busqueda" action="" method="post">
-                <p>
-                    <label for="nombre"></label>
-                    <input type="text" name="busqueda" id="busqueda" required="obligatorio" placeholder="Buscar">
-                </p>
-            </form>
-            -->
+        <div>
+            <a href="../index.html">
+                <img src="../img/logo.png" alt="logo" class="logo">
+            </a>
+            <!-- 
+        <form class="busqueda" action="" method="post">
+            <p>
+                <label for="nombre"></label>
+                <input type="text" name="busqueda" id="busqueda" required="obligatorio" placeholder="Buscar">
+            </p>
+        </form>
+        -->
+        </div>
         <nav class="menu">
             <ul>
                 <li>
                     <a href="../index.html">Inicio</a>
                 </li>
-                <li> <a href="">Productos</a>
+                <li> <a href="mangas.html">Productos</a>
                     <ul>
                         <li><a href="mangas.html">Mangas</a>
                         </li>
@@ -84,7 +91,7 @@
             Copyright Melon Pan | 2022. Todos los derechos reservados.
             Defensa de las y los consumidores.
         </p>
-        <div class="redes">
+        <div>
             <h5>Seguinos en nuestras redes!</h5>
             <a class="nostyle" href="https://www.instagram.com">
                 <img class="redesImagenes" src="../img/insta.png" alt="Instagram">
