--- a/paginas/indumentaria.html
+++ b/paginas/indumentaria.html
@@ -9,6 +9,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilo.css">
+    <meta name="keywords" content="Manga, Figuras, Indumentaria, Anime, Tienda">
+    <meta name="description" content="Tienda online con tematica de anime/manga">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="../img/icono.png">
 </head>
 
@@ -16,8 +19,9 @@
     <div class="fondo"></div>
     <div class="gridProductos">
         <header>
+            <div>
             <a href="../index.html">
-                <img src="../img/logo.png" alt="logo" width="100px">
+                <img src="../img/logo.png" alt="logo" class="logo">
             </a>
             <!-- 
             <form class="busqueda" action="" method="post">
@@ -27,6 +31,7 @@
                 </p>
             </form>
             -->
+        </div>
             <nav class="menu">
                 <ul>
                     <li>
