--- a/paginas/mangas.html
+++ b/paginas/mangas.html
@@ -9,6 +9,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilo.css">
+    <meta name="keywords" content="Manga, Figuras, Indumentaria, Anime, Tienda">
+    <meta name="description" content="Tienda online con tematica de anime/manga">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="../img/icono.png">
 </head>
 
@@ -16,10 +21,11 @@
     <div class="fondo"></div>
     <div class="gridProductos">
         <header>
-            <a href="../index.html">
-                <img src="../img/logo.png" alt="logo" width="100px">
-            </a>
-            <!-- 
+            <div>
+                <a href="../index.html">
+                    <img src="../img/logo.png" alt="logo" class="logo">
+                </a>
+                <!-- 
             <form class="busqueda" action="" method="post">
                 <p>
                     <label for="nombre"></label>
@@ -27,6 +33,7 @@
                 </p>
             </form>
             -->
+            </div>
             <nav class="menu">
                 <ul>
                     <li>
@@ -170,7 +177,7 @@
                 </div>
                 <div class="productos__contenedor">
                     <div>
-                        <h3>Madoka Magica 
+                        <h3>Madoka Magica
                             Homura's Revenge 2</h3>
                     </div>
                     <div class="productos__imagen">
@@ -191,25 +198,25 @@
                         <p>$9.99</p>
                     </div>
                 </div>
-    
-    </section>
-    </main>
-    <footer>
-        <img class="logoFooter" src="../img/logo.png" alt="logo">
-        <p>
-            Copyright Melon Pan | 2022. Todos los derechos reservados.
-            Defensa de las y los consumidores.
-        </p>
-        <div class="redes">
-            <h5>Seguinos en nuestras redes!</h5>
-            <a class="nostyle" href="https://www.instagram.com">
-                <img class="redesImagenes" src="../img/insta.png" alt="Instagram">
-            </a>
-            <a class="nostyle" href="https://twitter.com/home">
-                <img class="redesImagenes" src="../img/twitter.png" alt="Twitter">
-            </a>
-        </div>
-    </footer>
+
+            </section>
+        </main>
+        <footer>
+            <img class="logoFooter" src="../img/logo.png" alt="logo">
+            <p>
+                Copyright Melon Pan | 2022. Todos los derechos reservados.
+                Defensa de las y los consumidores.
+            </p>
+            <div class="redes">
+                <h5>Seguinos en nuestras redes!</h5>
+                <a class="nostyle" href="https://www.instagram.com">
+                    <img class="redesImagenes" src="../img/insta.png" alt="Instagram">
+                </a>
+                <a class="nostyle" href="https://twitter.com/home">
+                    <img class="redesImagenes" src="../img/twitter.png" alt="Twitter">
+                </a>
+            </div>
+        </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
@@ -218,4 +225,5 @@
         integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
