--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
             <div class="redes">
                 <h5>Seguinos en nuestras redes!</h5>
                 <a class="nostyle" href="https://www.instagram.com">
-                    <img class="redesImagenes" src="../img/insta.png" alt="Instagram">
+                    <img class="redesImagenes" src="./img/insta.png" alt="Instagram">
                 </a>
                 <a class="nostyle" href="https://twitter.com/home">
-                    <img class="redesImagenes" src="../img/twitter.png" alt="Twitter">
+                    <img class="redesImagenes" src="./img/twitter.png" alt="Twitter">
                 </a>
             </div>
         </footer>
